--- a/vue/src/assets/css/articlelist.styl
+++ b/vue/src/assets/css/articlelist.styl
@@ -1,8 +1,11 @@
 .ariticleList {
-  .hint {
-    text-align: center;
-  }
 
+  .hint {
+    text-align: center
+  }
+  .ariticle:first-child {
+    margin-top: 30px;
+  }
   .ariticle {
     position: relative;
     width: 694px;
@@ -66,6 +69,7 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       text-align: left;
+      text-indent: 32px
 
       .content_space {
         display: inline-block;
