--- a/vue/src/assets/css/user.styl
+++ b/vue/src/assets/css/user.styl
@@ -92,15 +92,17 @@
     }
 
     .content {
-      padding-top: 20px;
-
       .content_title {
         padding: 10px 0;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         text-align: center;
         background-color: #111;
         border-radius: 10px;
         font-size: 30px;
+      }
+    
+      .hint {
+        text-align: center
       }
 
       .add_ariticle {
