添加文章分类组件

--- a/vue/src/assets/css/index.styl
+++ b/vue/src/assets/css/index.styl
@@ -71,6 +71,7 @@ body {
 
   .article {
     .content {
+      
       pre {
         width: 100%;
         padding: 20px;
@@ -148,6 +149,21 @@ body {
         border-left: 5px solid #666;
         border-radius: 2px;
         margin: 8px 0;
+      }
+
+      // 文章分类样式
+      a.articleTypeList {
+        padding: 3px 5px;
+        margin: 0 3px;
+        background-color: #222;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        color: #666;
+
+        &:hover {
+          color: #999;
+        }
       }
     }  
   }
