--- a/vue/src/assets/css/user.styl
+++ b/vue/src/assets/css/user.styl
@@ -20,10 +20,12 @@
 
         .explain {
           float: left;
+          height: 80px;
           margin-left: 20px;
 
           .title {
             position: relative;
+            margin: 10px 0 0;
             font-size: 20px;
             cursor: pointer;
 
